--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -23,3 +23,44 @@
     width: 100%;
     justify-content: space-evenly;
 }
+
+.nav-l {
+    display: flex;
+    flex-direction: column;
+    background: black;
+    width: 117px;
+    height: 100%;
+    align-items: center;
+    position: absolute;
+
+    p {
+        color: white;
+        transform: rotate(270deg);
+        position: absolute;
+        bottom: 150px;
+        width: 185px;
+    }
+
+    img {
+        height: 32px;
+    }
+
+    .nav-l-group {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        position: relative;
+        top: 30%;
+        height: 316px;
+    }
+
+    .nav-l-bt {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 64px;
+        height: 64px;
+        background-color: white;
+        border-radius: 6px;
+    }
+}
