--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -31,4 +31,41 @@ a {
   display: flex;
   width: 100%;
   justify-content: space-evenly;
+}
+
+.nav-l {
+  display: flex;
+  flex-direction: column;
+  background: black;
+  width: 117px;
+  height: 100%;
+  align-items: center;
+  position: absolute;
+}
+.nav-l p {
+  color: white;
+  transform: rotate(270deg);
+  position: absolute;
+  bottom: 150px;
+  width: 185px;
+}
+.nav-l img {
+  height: 32px;
+}
+.nav-l .nav-l-group {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+  top: 30%;
+  height: 316px;
+}
+.nav-l .nav-l-bt {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 64px;
+  height: 64px;
+  background-color: white;
+  border-radius: 6px;
 }/*# sourceMappingURL=main.css.map */
