--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -1,6 +1,7 @@
 /* Header */
 
 .header {
+    width: 100%;
     height: 91px;
     background-color: #020203;
     display: flex;
@@ -20,26 +21,39 @@
 
 .nav-t {
     display: flex;
-    width: 100%;
+    width: 1024px;
     justify-content: space-evenly;
 }
 
 .nav-l {
     display: flex;
+    justify-content: center;
     flex-direction: column;
     background: black;
     width: 117px;
     height: 100%;
     align-items: center;
     position: absolute;
+    top: 0px;
+    z-index: -1;
 
-    p {
-        color: white;
-        transform: rotate(270deg);
-        position: absolute;
-        bottom: 150px;
-        width: 185px;
+    .copiryght {
+        transform: rotate(-90deg);
+        width: 150px;
+        position: relative;
+        top: 20%;
+        text-align: center;
+
+        p {
+            color: white;
+            font-weight: 500;
+            font-size: 12px;
+            line-height: 24px;
+        }
     }
+
+
+
 
     img {
         height: 32px;
@@ -50,17 +64,18 @@
         flex-direction: column;
         justify-content: space-between;
         position: relative;
-        top: 30%;
         height: 316px;
+
+        .nav-l-bt {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 64px;
+            height: 64px;
+            background-color: white;
+            border-radius: 6px;
+        }
     }
 
-    .nav-l-bt {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 64px;
-        height: 64px;
-        background-color: white;
-        border-radius: 6px;
-    }
+
 }
