--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -77,4 +77,15 @@ a {
   height: 64px;
   background-color: white;
   border-radius: 6px;
+}
+
+.statSection {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
+
+.bt-test {
+  width: 30px;
+  height: 30px;
 }/*# sourceMappingURL=main.css.map */
