--- a/src/pages/Home/_home.scss
+++ b/src/pages/Home/_home.scss
@@ -1,10 +1,14 @@
+/* Dashboard */
+
 .statSection {
     position: absolute;
     top: 50%;
     left: 50%;
 }
 
-.bt-test {
-    width: 30px;
-    height: 30px;
+.dashBoard {
+    // display: flex;
+    // justify-content: center;
+    position: absolute;
+    margin-left: 117px;
 }
