--- a/src/pages/Home/_home.css
+++ b/src/pages/Home/_home.css
@@ -1,1 +1,1 @@
-.statSection{position:absolute;top:50%;left:50%}.bt-test{width:30px;height:30px}
+.statSection{position:absolute;top:50%;left:50%}.dashBoard{position:absolute;margin-left:117px}
