--- a/src/styles/_global.css
+++ b/src/styles/_global.css
@@ -1,1 +1,1 @@
-@import"https://fonts.googleapis.com/css2?family=Roboto&display=swap";*{font-family:"Roboto",sans-serif;margin:0;padding:0}a{text-decoration:none}
+@import"https://fonts.googleapis.com/css2?family=Roboto&display=swap";*{font-family:"Roboto",sans-serif;font-weight:500;margin:0;padding:0}a{text-decoration:none}
