--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 * {
   font-family: "Roboto", sans-serif;
+  font-weight: 500;
   margin: 0;
   padding: 0;
 }
@@ -79,13 +80,27 @@ a {
   border-radius: 6px;
 }
 
+/* Welcome */
+.welComeMessage {
+  margin-bottom: 77px;
+}
+
+.welComeFirstName {
+  font-size: 48px;
+  margin-bottom: 41px;
+}
+.welComeFirstName .firstName {
+  color: #FF0101;
+}
+
+/* Dashboard */
 .statSection {
   position: absolute;
   top: 50%;
   left: 50%;
 }
 
-.bt-test {
-  width: 30px;
-  height: 30px;
+.dashBoard {
+  position: absolute;
+  margin-left: 117px;
 }/*# sourceMappingURL=main.css.map */
