--- a/src/pages/Home/_home.css
+++ b/src/pages/Home/_home.css
@@ -1,1 +1,1 @@
-.statSection{position:absolute;top:50%;left:50%}.dashBoard{position:absolute;margin-left:117px}
+.statSection{position:absolute;top:50%;left:50%}.dashBoard{position:absolute;margin-left:117px}.globalInformations{border:dotted;display:flex}.globalInformations .centerInformations{background-color:#7fffd4;border:solid}.globalInformations .centerInformations .bodyWeight{border:groove}.globalInformations .centerInformations .charts{border:groove}.globalInformations .sideInformations{background-color:coral;border:groove}
