--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import "./global";
 @import "../components/Header/header";
 @import "../components/Welcome/welcome";
+@import "../components/Informations/informations";
 @import "../pages/Home/home"
