--- a/src/components/Informations/_informations.scss
+++ b/src/components/Informations/_informations.scss
@@ -7,6 +7,17 @@
     align-items: center;
     margin-bottom: 25px;
     background-color: #FBFBFB;
+
+    span {
+        font-weight: 700;
+        font-size: 20px;
+    }
+
+    p {
+        font-weight: 500;
+        font-size: 14px;
+        color: #74798C;
+    }
 }
 
 .logoInformationCount {
@@ -16,6 +27,8 @@
     height: 60px;
     width: 60px;
     border-radius: 6px;
+    margin-left: 32px;
+    margin-right: 24px;
 
     img {
         height: 20px;
@@ -25,4 +38,16 @@
 
 .caloriesCount div:nth-child(1) {
     background-color: rgb(255, 0, 0, 0.1);
+}
+
+.proteinsCount div:nth-child(1) {
+    background-color: rgb(74, 184, 255, 0.1);
+}
+
+.glucidesCount div:nth-child(1) {
+    background-color: rgb(253, 204, 12, 0.1);
+}
+
+.lipidCount div:nth-child(1) {
+    background-color: rgb(253, 81, 129, 0.1);
 }
