--- a/src/components/Informations/_informations.scss
+++ b/src/components/Informations/_informations.scss
@@ -7,6 +7,8 @@
     align-items: center;
     margin-bottom: 25px;
     background-color: #FBFBFB;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.02);
+    border-radius: 5px;
 
     span {
         font-weight: 700;
