--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -101,6 +101,8 @@ a {
   align-items: center;
   margin-bottom: 25px;
   background-color: #FBFBFB;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.02);
+  border-radius: 5px;
 }
 .sideInformationsCount span {
   font-weight: 700;
@@ -155,7 +157,6 @@ a {
 }
 
 .globalInformations {
-  border: dotted;
   display: flex;
 }
 .globalInformations .centerInformations {
