Axios mockServices : fonctionne 👍🏻

--- a/src/components/Informations/_informations.scss
+++ b/src/components/Informations/_informations.scss
@@ -1,6 +1,6 @@
 /* Side informations */
 
-.sideInformationsCount {
+.sideInformationsContainer {
     display: flex;
     width: 258px;
     height: 124px;
