--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,4 +2,5 @@
 @import "../components/Header/header";
 @import "../components/Welcome/welcome";
 @import "../components/Informations/informations";
-@import "../pages/Home/home"
+@import "../pages/Home/home";
+@import "../pages/Dashboard/dashboard";
