--- a/src/pages/Home/_home.scss
+++ b/src/pages/Home/_home.scss
@@ -1,32 +1,19 @@
-/* Dashboard */
+.containerUsers {
 
-.statSection {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-}
-
-.dashBoard {
-    // display: flex;
-    // justify-content: center;
-    position: absolute;
-    margin-left: 117px;
-}
-
-.globalInformations {
-    // border: dotted;
     display: flex;
+    flex-direction: column;
+    left: 117px;
+    position: relative;
+    width: 400px;
+    left: 40%;
+    align-items: center;
 
-    .centerInformations {
-        background-color: aquamarine;
-        border: solid;
+}
 
-        .bodyWeight {
-            border: groove;
-        }
+.usersChoice {
 
-        .charts {
-            border: groove;
-        }
-    }
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+
 }
