Module Score init

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,5 +2,6 @@
 @import "../components/Header/header";
 @import "../components/Welcome/welcome";
 @import "../components/Informations/informations";
+@import "../components/Score/score";
 @import "../pages/Home/home";
 @import "../pages/Dashboard/dashboard";
