--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -144,6 +144,27 @@ a {
   background-color: rgba(253, 81, 129, 0.1);
 }
 
+.container {
+  box-sizing: border-box;
+  padding: 10px;
+  width: 250px;
+  height: 250px;
+  background-color: #fff;
+}
+
+.rateScoreText {
+  font-weight: 700;
+  font-size: 26px;
+  fill: #282D30;
+}
+
+.yourText,
+.goalText {
+  font-weight: 500;
+  font-size: 16px;
+  fill: #74798C;
+}
+
 .containerUsers {
   display: flex;
   flex-direction: column;
