--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,5 +3,6 @@
 @import "../components/Welcome/welcome";
 @import "../components/Informations/informations";
 @import "../components/Score/score";
+@import "../components/Radar/radar";
 @import "../pages/Home/home";
 @import "../pages/Dashboard/dashboard";
