Radar : Modification Css

--- a/src/components/Score/_score.css
+++ b/src/components/Score/_score.css
@@ -1,1 +1,1 @@
-.container{box-sizing:border-box;padding:10px;width:250px;height:250px;background-color:#fff}.rateScoreText{font-weight:700;font-size:26px;fill:#282d30}.yourText,.goalText{font-weight:500;font-size:16px;fill:#74798c}
+.container{box-sizing:border-box;padding:10px;width:250px;height:250px;border-radius:5px;background-color:#fbfbfb}.rateScoreText{font-weight:700;font-size:26px;fill:#282d30}.yourText,.goalText{font-weight:500;font-size:16px;fill:#74798c}
