--- a/src/components/Score/_score.scss
+++ b/src/components/Score/_score.scss
@@ -5,7 +5,8 @@
     padding: 10px;
     width: 250px;
     height: 250px;
-    background-color: #fff;
+    border-radius: 5px;
+    background-color: #FBFBFB;
 }
 
 .rateScoreText {
