--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -149,7 +149,8 @@ a {
   padding: 10px;
   width: 250px;
   height: 250px;
-  background-color: #fff;
+  border-radius: 5px;
+  background-color: #FBFBFB;
 }
 
 .rateScoreText {
