Radar : Resize bug 🪳

--- a/src/components/Score/_score.scss
+++ b/src/components/Score/_score.scss
@@ -1,7 +1,9 @@
-.container {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+/* Score */
+
+.scoreContainer {
+    // -webkit-box-sizing: border-box;
+  // -moz-box-sizing: border-box;
+  // box-sizing: border-box;
     padding: 10px;
     width: 250px;
     height: 250px;
