--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -144,8 +144,8 @@ a {
   background-color: rgba(253, 81, 129, 0.1);
 }
 
-.container {
-  box-sizing: border-box;
+/* Score */
+.scoreContainer {
   padding: 10px;
   width: 250px;
   height: 250px;
@@ -164,6 +164,15 @@ a {
   font-weight: 500;
   font-size: 16px;
   fill: #74798C;
+}
+
+/* Radar */
+.radarContainer {
+  background-color: #282D30;
+  padding: 10px;
+  width: 250px;
+  height: 250px;
+  border-radius: 5px;
 }
 
 .containerUsers {
@@ -205,5 +214,5 @@ a {
   border: groove;
 }
 .globalInformations .centerInformations .charts {
-  border: groove;
+  display: flex;
 }/*# sourceMappingURL=main.css.map */
