--- a/src/components/Radar/_radar.scss
+++ b/src/components/Radar/_radar.scss
@@ -2,8 +2,8 @@
 
 .radarContainer {
     background-color: #282D30;
-    padding: 10px;
-    width: 250px;
-    height: 250px;
+    // padding: 10px;
+    width: 270px;
+    height: 270px;
     border-radius: 5px;
 }
