--- a/src/components/Score/_score.scss
+++ b/src/components/Score/_score.scss
@@ -2,11 +2,11 @@
 
 .scoreContainer {
     // -webkit-box-sizing: border-box;
-  // -moz-box-sizing: border-box;
-  // box-sizing: border-box;
-    padding: 10px;
-    width: 250px;
-    height: 250px;
+    // -moz-box-sizing: border-box;
+    // box-sizing: border-box;
+    // padding: 10px;
+    width: 270px;
+    height: 270px;
     border-radius: 5px;
     background-color: #FBFBFB;
 }
