--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,5 +4,6 @@
 @import "../components/Informations/informations";
 @import "../components/Score/score";
 @import "../components/Radar/radar";
+@import "../components/GoalTimer/goalTimer";
 @import "../pages/Home/home";
 @import "../pages/Dashboard/dashboard";
