--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,5 +5,6 @@
 @import "../components/Score/score";
 @import "../components/Radar/radar";
 @import "../components/Sessions/averageSessions";
+@import "../components/Activity/activity";
 @import "../pages/Home/home";
 @import "../pages/Dashboard/dashboard";
