--- a/src/components/Activity/_activity.css
+++ b/src/components/Activity/_activity.css
@@ -1,1 +1,1 @@
-.activityContainer{background-color:#fbfbfb;border-radius:5px}
+.activityContainer{background-color:#fbfbfb;border-radius:5px}.activityTooltip{display:flex;flex-direction:column;justify-content:space-between;width:39px;height:63px;background:#e60000;color:#fff;border-radius:0px;padding:10px;font-size:10px;font-weight:500;text-align:center}
