Activity's dayFormatter & Legend Css

--- a/src/pages/Dashboard/_dashboard.scss
+++ b/src/pages/Dashboard/_dashboard.scss
@@ -18,8 +18,8 @@
     display: flex;
 
     .centerInformations {
-        background-color: aquamarine;
-        border: solid;
+        // background-color: aquamarine;
+        // border: solid;
 
         .bodyWeight {
             border: groove;
