--- a/src/components/Activity/_activity.scss
+++ b/src/components/Activity/_activity.scss
@@ -1,10 +1,8 @@
 /* Activities */
 .activityContainer {
     background-color: #FBFBFB;
-
-    // width: 100%;
-    // height: 270px;
     border-radius: 5px;
+    padding: 24px 32px 24px 32px;
 }
 
 .activityTooltip {
@@ -20,4 +18,12 @@
     font-size: 10px;
     font-weight: 500;
     text-align: center;
+}
+
+.activityContainerTitle {
+    color: #20253A;
+}
+
+.textColorLegend {
+    color: #74798C;
 }
