--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -185,6 +185,7 @@ a {
 .activityContainer {
   background-color: #FBFBFB;
   border-radius: 5px;
+  padding: 24px 32px 24px 32px;
 }
 
 .activityTooltip {
@@ -200,6 +201,14 @@ a {
   font-size: 10px;
   font-weight: 500;
   text-align: center;
+}
+
+.activityContainerTitle {
+  color: #20253A;
+}
+
+.textColorLegend {
+  color: #74798C;
 }
 
 .containerUsers {
@@ -232,10 +241,6 @@ a {
 
 .globalInformations {
   display: flex;
-}
-.globalInformations .centerInformations {
-  background-color: aquamarine;
-  border: solid;
 }
 .globalInformations .centerInformations .bodyWeight {
   border: groove;
