Css .dashBoard & .activityContainerTitle

--- a/src/components/Activity/_activity.scss
+++ b/src/components/Activity/_activity.scss
@@ -22,8 +22,16 @@
 
 .activityContainerTitle {
     color: #20253A;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 24px;
 }
 
 .textColorLegend {
     color: #74798C;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 24px;
 }
