--- a/src/components/Informations/_informations.scss
+++ b/src/components/Informations/_informations.scss
@@ -1,5 +1,9 @@
 /* Side informations */
 
+.sideInformations {
+    margin-left: 3%;
+}
+
 .sideInformationsContainer {
     display: flex;
     width: 258px;
