--- a/src/components/Radar/_radar.css
+++ b/src/components/Radar/_radar.css
@@ -1,1 +1,1 @@
-.radarContainer{background-color:#282d30;width:270px;height:270px;border-radius:5px}
+.radarContainer{background-color:#282d30;width:30%;height:270px;border-radius:5px}
