--- a/src/components/Radar/_radar.scss
+++ b/src/components/Radar/_radar.scss
@@ -2,8 +2,7 @@
 
 .radarContainer {
     background-color: #282D30;
-    // padding: 10px;
-    width: 270px;
+    width: 30%;
     height: 270px;
     border-radius: 5px;
 }
