--- a/src/components/Score/_score.scss
+++ b/src/components/Score/_score.scss
@@ -1,11 +1,7 @@
 /* Score */
 
 .scoreContainer {
-    // -webkit-box-sizing: border-box;
-    // -moz-box-sizing: border-box;
-    // box-sizing: border-box;
-    // padding: 10px;
-    width: 270px;
+    width: 30%;
     height: 270px;
     border-radius: 5px;
     background-color: #FBFBFB;
@@ -23,13 +19,3 @@
     font-size: 16px;
     fill: #74798C;
 }
-
-// .score {
-//     width: 200px;
-//     height: 200px;
-// }
-
-// .score-container {
-//     width: 100%;
-//     height: 100%;
-// }
