--- a/src/pages/Dashboard/_dashboard.css
+++ b/src/pages/Dashboard/_dashboard.css
@@ -1,1 +1,1 @@
-.statSection{position:absolute;top:50%;left:50%}.dashBoard{position:absolute;margin-left:224px;width:80%}.globalInformations{display:flex;justify-content:space-between}.centerInformations{position:relative;width:70%;height:88%}.charts{display:flex}
+.statSection{position:absolute;top:50%;left:50%}.dashBoard{position:absolute;left:224px;top:138px;width:80%}.globalInformations{display:flex;justify-content:space-between}.centerInformations{position:relative;width:100%;height:88%}.charts{display:flex;justify-content:space-between}
