--- a/src/pages/Dashboard/_dashboard.scss
+++ b/src/pages/Dashboard/_dashboard.scss
@@ -8,7 +8,8 @@
 
 .dashBoard {
     position: absolute;
-    margin-left: 224px;
+    left: 224px;
+    top: 138px;
     width: 80%;
 }
 
@@ -19,10 +20,11 @@
 
 .centerInformations {
     position: relative;
-    width: 70%;
+    width: 100%;
     height: 88%;
 }
 
 .charts {
     display: flex;
+    justify-content: space-between;
 }
