Css activity, header, wellcome

--- a/src/components/Activity/_activity.scss
+++ b/src/components/Activity/_activity.scss
@@ -3,6 +3,7 @@
     background-color: #FBFBFB;
     border-radius: 5px;
     padding: 24px 32px 24px 32px;
+    margin-bottom: 30px;
 }
 
 .activityTooltip {
