--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -1,7 +1,7 @@
 /* Header */
 
 .header {
-    width: 100%;
+    width: 100vw;
     height: 91px;
     background-color: #020203;
     display: flex;
@@ -31,7 +31,7 @@
     flex-direction: column;
     background: black;
     width: 117px;
-    height: 100%;
+    height: 100vh;
     align-items: center;
     position: absolute;
     top: 0px;
