--- a/src/components/Informations/_informations.scss
+++ b/src/components/Informations/_informations.scss
@@ -2,6 +2,9 @@
 
 .sideInformations {
     margin-left: 3%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .sideInformationsContainer {
@@ -9,7 +12,7 @@
     width: 258px;
     height: 124px;
     align-items: center;
-    margin-bottom: 25px;
+    // margin-bottom: 25px;
     background-color: #FBFBFB;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.02);
     border-radius: 5px;
