--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,3 +8,5 @@
 @import "../components/Activity/activity";
 @import "../pages/Home/home";
 @import "../pages/Dashboard/dashboard";
+@import "../pages/Error/error";
+@import "../components/Loader/loader"
