--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,4 +9,5 @@
 @import "../pages/Home/home";
 @import "../pages/Dashboard/dashboard";
 @import "../pages/Error/error";
+@import "../components/Error/moduleError";
 @import "../components/Loader/loader"
