--- a/src/components/Informations/_informations.scss
+++ b/src/components/Informations/_informations.scss
@@ -45,18 +45,18 @@
 
 }
 
-.caloriesCount div:nth-child(1) {
+.calorieCount {
     background-color: rgb(255, 0, 0, 0.1);
 }
 
-.proteinsCount div:nth-child(1) {
+.proteinCount {
     background-color: rgb(74, 184, 255, 0.1);
 }
 
-.glucidesCount div:nth-child(1) {
+.carbohydrateCount {
     background-color: rgb(253, 204, 12, 0.1);
 }
 
-.lipidCount div:nth-child(1) {
+.lipidCount {
     background-color: rgb(253, 81, 129, 0.1);
 }
