--- a/src/components/Radar/_radar.scss
+++ b/src/components/Radar/_radar.scss
@@ -2,7 +2,7 @@
 
 .radarContainer {
     background-color: #282D30;
-    width: 30%;
-    height: 270px;
+    // width: 30%;
+    height: 250px;
     border-radius: 5px;
 }
