--- a/src/components/Score/_score.css
+++ b/src/components/Score/_score.css
@@ -1,1 +1,1 @@
-.scoreContainer{width:30%;height:270px;border-radius:5px;background-color:#fbfbfb}.rateScoreText{font-weight:700;font-size:26px;fill:#282d30}.yourText,.goalText{font-weight:500;font-size:16px;fill:#74798c}
+.scoreContainer{height:250px;border-radius:5px;background-color:#fbfbfb}.rateScoreText{font-weight:700;font-size:26px;fill:#282d30}.yourText,.goalText{font-weight:500;font-size:16px;fill:#74798c}
