--- a/src/components/Score/_score.scss
+++ b/src/components/Score/_score.scss
@@ -1,8 +1,8 @@
 /* Score */
 
 .scoreContainer {
-    width: 30%;
-    height: 270px;
+    // width: 30%;
+    height: 250px;
     border-radius: 5px;
     background-color: #FBFBFB;
 }
