--- a/src/pages/Home/_home.scss
+++ b/src/pages/Home/_home.scss
@@ -1,19 +1,37 @@
 .containerUsers {
-
     display: flex;
+    max-width: 1440px;
+    height: 80vh;
+    margin: auto;
     flex-direction: column;
-    left: 117px;
-    position: relative;
-    width: 400px;
-    left: 40%;
+    justify-content: space-between;
     align-items: center;
+    margin-left: 117px;
+
 
 }
 
 .usersChoice {
 
     display: flex;
-    width: 100%;
+    height: 100%;
+    width: 70%;
     justify-content: space-around;
+    align-items: center;
+}
+
+.userButton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    width: 45%;
+    min-width: 200px;
+    height: 200px;
+    background-color: red;
+    border-radius: 10px;
+    font-weight: 800;
+    font-size: 25px;
+
 
 }
