--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -1,7 +1,7 @@
 /* Header */
 
 .header {
-    width: 100vw;
+    // width: 100vw;
     height: 91px;
     background-color: #020203;
     display: flex;
