--- a/src/pages/Home/_home.scss
+++ b/src/pages/Home/_home.scss
@@ -1,7 +1,8 @@
+/* Home page */
+
 .usersContainer {
     display: flex;
     max-width: 1280px;
-    // width: 100vw;
     height: 80vh;
     flex-direction: column;
     align-items: center;
@@ -44,6 +45,7 @@
     transition: all 0.15s ease-out;
 
     * {
+        text-align: center;
         color: white;
         z-index: 1;
     }
@@ -70,11 +72,16 @@
         height: 75vh;
     }
 
+    .userButton {
+        min-width: 150px;
+        height: 150px;
+    }
+
     .buttonContainer {
         flex-direction: column;
         align-items: center;
         width: 100%;
-        justify-content: space-between;
+        justify-content: none;
         height: 50vh;
     }
 }
